{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 60,
  "lineage": "f4d01a6d-8a5c-1bd7-8611-8d3d6a7b5484",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00bcc4139a1d93218",
            "association_id": "eipassoc-0890eb53974e053d0",
            "domain": "vpc",
            "id": "eipalloc-00bcc4139a1d93218",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ce4b6ddb043f9d5e",
            "private_dns": "ip-10-0-0-38.ec2.internal",
            "private_ip": "10.0.0.38",
            "public_dns": "ec2-44-213-39-108.compute-1.amazonaws.com",
            "public_ip": "44.213.39.108",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09cf04b436c94d7f7",
            "arn": "arn:aws:ec2:us-east-1:782863115905:instance/i-013d6d45a2f7828d6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-013d6d45a2f7828d6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Parent-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e82fd0f6639283a3",
            "private_dns": "ip-10-0-0-63.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.63",
            "public_dns": "ec2-54-211-168-108.compute-1.amazonaws.com",
            "public_ip": "54.211.168.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fa45d4b873f2b10f",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09c07c6b67976b9cb",
            "tags": {
              "Name": "brian-EC2"
            },
            "tags_all": {
              "Name": "brian-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f24613193378b517"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "aws_subnet.Public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone",
            "data.aws_ssm_parameter.instance_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:internet-gateway/igw-06f9c36c39fb09b8c",
            "id": "igw-06f9c36c39fb09b8c",
            "owner_id": "782863115905",
            "tags": {
              "Name": "brian-IGW"
            },
            "tags_all": {
              "Name": "brian-IGW"
            },
            "vpc_id": "vpc-06fcb3c4dd2d286d0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main_NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00bcc4139a1d93218",
            "connectivity_type": "public",
            "id": "nat-0bfc899753aafce1b",
            "network_interface_id": "eni-0ce4b6ddb043f9d5e",
            "private_ip": "10.0.0.38",
            "public_ip": "44.213.39.108",
            "subnet_id": "subnet-09c07c6b67976b9cb",
            "tags": {
              "Name": "brian-NGW"
            },
            "tags_all": {
              "Name": "brian-NGW"
            }
          },
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_subnet.Public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07ccf463c28339cf51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bfc899753aafce1b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07ccf463c28339cf5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_nat_gateway.main_NAT",
            "aws_route_table.Private",
            "aws_subnet.Public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06f9c36c39fb09b8c",
            "id": "r-rtb-01c96a4426e6fb97d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01c96a4426e6fb97d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.Public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:route-table/rtb-07ccf463c28339cf5",
            "id": "rtb-07ccf463c28339cf5",
            "owner_id": "782863115905",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bfc899753aafce1b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "brian-Private-RT"
            },
            "tags_all": {
              "Name": "brian-Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fcb3c4dd2d286d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:route-table/rtb-01c96a4426e6fb97d",
            "id": "rtb-01c96a4426e6fb97d",
            "owner_id": "782863115905",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06f9c36c39fb09b8c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "brian-Public-RT"
            },
            "tags_all": {
              "Name": "brian-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fcb3c4dd2d286d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b09f974280fd47b",
            "route_table_id": "rtb-01c96a4426e6fb97d",
            "subnet_id": "subnet-09c07c6b67976b9cb"
          },
          "dependencies": [
            "aws_route_table.Public",
            "aws_subnet.Public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc41b0cb0493450e",
            "route_table_id": "rtb-01c96a4426e6fb97d",
            "subnet_id": "subnet-0c1bb1f7d60575d89"
          },
          "dependencies": [
            "aws_route_table.Public",
            "aws_subnet.Public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce9032c9b4e66f1b",
            "route_table_id": "rtb-07ccf463c28339cf5",
            "subnet_id": "subnet-0807220054b0e433b"
          },
          "dependencies": [
            "aws_route_table.Private",
            "aws_subnet.Private",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b46105079ecfa96e",
            "route_table_id": "rtb-07ccf463c28339cf5",
            "subnet_id": "subnet-0ae08c9c3bf1b9356"
          },
          "dependencies": [
            "aws_route_table.Private",
            "aws_subnet.Private",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-0807220054b0e433b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0807220054b0e433b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "brian-Private-Subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "brian-Private-Subnet-us-east-1a"
            },
            "vpc_id": "vpc-06fcb3c4dd2d286d0"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-0ae08c9c3bf1b9356",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae08c9c3bf1b9356",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "brian-Private-Subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "brian-Private-Subnet-us-east-1b"
            },
            "vpc_id": "vpc-06fcb3c4dd2d286d0"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-09c07c6b67976b9cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c07c6b67976b9cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "brian-Public-Subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "brian-Public-Subnet-us-east-1a"
            },
            "vpc_id": "vpc-06fcb3c4dd2d286d0"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:subnet/subnet-0c1bb1f7d60575d89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1bb1f7d60575d89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "782863115905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "brian-Public-Subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "brian-Public-Subnet-us-east-1b"
            },
            "vpc_id": "vpc-06fcb3c4dd2d286d0"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782863115905:vpc/vpc-06fcb3c4dd2d286d0",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01d1aa2fb9125272d",
            "default_route_table_id": "rtb-0d28e48e2c0f3ac0a",
            "default_security_group_id": "sg-0f24613193378b517",
            "dhcp_options_id": "dopt-04b46d2964e3827c1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06fcb3c4dd2d286d0",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0702f2b89f46cd41a",
            "ipv6_cidr_block": "2600:1f10:41fb:4600::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d28e48e2c0f3ac0a",
            "owner_id": "782863115905",
            "tags": {
              "Name": "brian-VPC"
            },
            "tags_all": {
              "Name": "brian-VPC"
            }
          }
        }
      ]
    }
  ]
}